--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
   <div class="container">
     <ui-view></ui-view>
   </div>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js" type="text/javascript" type="text/javascript"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js" type="text/javascript" type="text/javascript"></script>
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDuJfEa0g92pOOjsB7o08avrqror9q0Zo&libraries=places" type="text/javascript"></script>
 </body>
 
