--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>FountainJS</title>
+  <title>MantunKapanintunan</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
@@ -15,14 +15,13 @@
   <div class="container">
     <ui-view></ui-view>
   </div>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js" type="text/javascript" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.5/lodash.min.js" type="text/javascript" type="text/javascript"></script>
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDuJfEa0g92pOOjsB7o08avrqror9q0Zo&libraries=places" type="text/javascript"></script>
+  
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDuJfEa0g92pOOjsB7o08avrqror9q0Zo&libraries=places"
+    type="text/javascript"></script>
 </body>
 
 </html>
