--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,17 @@
   <header-bar></header-bar>
   <div class="container">
     <ui-view></ui-view>
+   
+    <footer>
+      <p class="float-left">Copyright &copy; 2018 Young Dumb and Broke Group </p>
+      <p>
+      <br> David, Erick Jaie | Calingo, Paulo | Mallari, Derek  
+      
+      <br><a href="mailto:erickjaie05@gmail.com?Subject=Hello%20again" target="_top">Email Us</a>
+      </p>
+    </footer>
+ 
+ 
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -22,6 +33,8 @@
   
   <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDuJfEa0g92pOOjsB7o08avrqror9q0Zo&libraries=places"
     type="text/javascript"></script>
+
+    
 </body>
 
 </html>
